--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App {
-  max-width: 700px;
+  max-width: 670px;
   background-color: #0093e9;
   background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
   margin: 16px auto;
@@ -12,6 +12,19 @@
 }
 ul {
   list-style-type: none;
+}
+
+i {
+  font-size: 1em;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+p {
+  font-size: 1.25em;
 }
 
 @media only screen and (max-width: 670px) {
@@ -29,11 +42,5 @@ ul {
   .forecast {
     width: 90%;
     display: flex;
-  }
-
-  .forecast img {
-    width: 80px;
-    display: block;
-    margin: 0 auto;
   }
 }
