--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,12 +1,3 @@
-i {
-  font-size: 1em;
-}
-
-a {
-  color: black;
-  text-decoration: none;
-}
-
 .card {
   background-color: rgba(255, 255, 255, 0.2);
 }
@@ -15,23 +6,8 @@ a {
   text-transform: uppercase;
   font-size: 2em;
 }
-.temp-switch {
-  height: 30px;
-}
 
-.btn-secondary {
-  color: black;
-  font-weight: bold;
-  background-color: #f0f0f0;
-}
-
-p {
-  font-size: 1.25em;
-}
-
-.card-body,
-.list-group,
-.list-group-item {
+.card-body {
   background-color: rgba(255, 255, 255, 0);
 }
 
@@ -46,7 +22,7 @@ p {
   border-radius: 0 5px 5px 0;
 }
 
-.date-text {
+.date {
   font-size: 0.8em;
 }
 
@@ -66,26 +42,17 @@ p {
 }
 
 .conditionIcon {
-  font-size: 1.5em;
-  margin-right: 20px;
+  margin-right: 10px;
+  font-size: 1.25em;
 }
 
-.forecast {
-  text-align: center;
-}
-
-.temp-forecast-max {
+.forecastMax {
   font-weight: 600;
   color: #48484a;
 }
 
 .forecast .card-text {
   font-size: 1em;
-}
-
-.footer {
-  text-align: center;
-  color: rgba(0, 0, 0, 0.8);
 }
 
 @media only screen and (max-width: 670px) {
@@ -95,17 +62,7 @@ p {
     margin-top: 10px;
   }
   .currentWeather {
-    width: 75%;
+    width: 80%;
     margin-top: 10px;
-  }
-  .forecast {
-    width: 90%;
-    display: flex;
-  }
-
-  .forecast img {
-    width: 80px;
-    display: block;
-    margin: 0 auto;
   }
 }
